--- a/src/styles/AllUniversities.module.css
+++ b/src/styles/AllUniversities.module.css
@@ -1,14 +1,5 @@
-/* Global Reset */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-body,
-html {
-  width: 100%;
-  height: 100%;
+.navSpacer {
+  height: 30px; 
 }
 
 /* Top Section */
