--- a/src/styles/TwelveContainer.module.css
+++ b/src/styles/TwelveContainer.module.css
@@ -11,6 +11,7 @@
 .logo {
   height: 120px;
   margin-bottom: 1rem;
+  margin-left: 2rem;
 }
 
 .leftSection {
@@ -75,7 +76,10 @@
     align-items: flex-start;
     padding: 2rem 1.5rem;
   }
-
+  .logo {
+    height: 100px;
+    margin-left: 1rem;
+  }
   .leftSection,
   .rightSection {
     width: 100%;
