--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -1,10 +1,13 @@
-.footerH {
+/* .footerH {
   background: #557E7C;
   padding: 2rem 4rem;
   font-family: Arial, sans-serif;
-  /* margin: 1rem; */
+} */
+.footerT {
+  background: #557E7C;
+  padding: 2rem 4rem;
+  font-family: Arial, sans-serif;
 }
-
 h3 {
   font-size: 1.1rem;
   font-weight: bold;
