--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -71,14 +71,14 @@ h3 {
 /* === Footer Bottom === */
 .footerBottom {
   border-top: 1px solid #000;
-  /* padding-top: 1rem; */
-  /* margin-top: 2rem; */
+  padding-top: 1rem;
+  margin-top: 2rem;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
   font-size: 0.85rem;
    /* background: #557E7C; */
-  padding: 2rem 4rem;
+  /* padding: 2rem 4rem; */
   font-family: Arial, sans-serif;
 }
 
@@ -113,7 +113,7 @@ h3 {
 .mobileOnly {
   display: none;
    /* background: #557E7C; */
-  padding: 2rem 4rem;
+  /* padding: 2rem 4rem; */
   font-family: Arial, sans-serif;
 }
 
@@ -125,7 +125,7 @@ h3 {
     padding-bottom: 0;
     margin-bottom: 0;
   }
-  .footer {
+  .footerT {
     padding: 0.2rem;
   }
   .desktopOnly {
